--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.5.2
 astroid==2.11.7
 Django==4.1
 django-filter==22.1
+django-heroku==0.3.1
 djangorestframework==3.13.1
 Faker==13.15.1
+gunicorn==20.1.0
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
